# polynomials

./: CMakeLists.txt  LICENSE  README.md  test.cpp
.github/workflows/: test.yml
include/polynomials/: assert.hpp  dense_polynomial.hpp  types.hpp
include/polynomials/src/: dense_operators.hpp  dense_ops.hpp  dense_scalar_operators.hpp  roots.hpp
tests/: CMakeLists.txt  basic_tests.cpp  dense_poly_poly_scalar.cpp  dense_poly_scalar_scalar.cpp  dense_polynomial_tests.hpp  dense_scalar_tests.hpp  minus_dense.cpp  minus_scalar_dense.cpp  mul_dense.cpp  mul_scalar_dense.cpp  plus_dense.cpp  plus_scalar_dense.cpp  testing.hpp
